--- a/src/components/login.css
+++ b/src/components/login.css
@@ -233,5 +233,110 @@
 
 
 @media screen and (max-width: 576px){
-  
+  .login-form {
+    position: absolute;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    width: 300px;
+    height: fit-content;
+    background: rgba(0, 0, 0, 0.62);
+    padding-bottom: 30px;
+  }
+  .spans {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    left: 0;
+  }
+  .span-signup {
+    background:#D21034;
+    width: 130px;
+    text-align: center;
+    padding: 10px;
+    color: #fff;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .span-signup:hover {
+      cursor: pointer;
+      background: #970d26;
+      color: #fff;
+  }
+  .span-login {
+    background: rgba(217, 217, 217, 0.55);
+    width: 130px;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .span-login:hover{
+      cursor: pointer;
+      background: rgba(132, 130, 130, 0.55);
+      color: white;
+  }
+  .login-form h1 {
+    margin-top: 20%;
+    color: #fff;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .first-last {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  .first-last-input {
+    border: 1px solid #fff;
+    background: rgba(217, 217, 217, 0.46);
+    width: 125px;
+    height: 35px;
+    padding: 5px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .first-last-input::placeholder {
+    color: #fff;
+    font-size: 14px;
+  }
+  .login-form-input {
+    border: 1px solid #fff;
+    background: rgba(217, 217, 217, 0.46);
+    width: 270px;
+    height: 35px;
+    padding: 5px;
+    color: #fff;
+    font-size: 20px;
+  }
+  .login-form-input::placeholder {
+    color: #fff;
+    font-size: 14px;
+  }
+  .login-form button {
+    background: #D21034;
+    color: #fff;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 170px;
+    height: 40px;
+    border-radius: 10px;
+  }
+  .login-form button:hover{
+      cursor: pointer;
+      background-color: transparent;
+      color:#D21034;
+      border: 1px solid #D21034;
+  }
 }
