--- a/src/components/volleyballPage.css
+++ b/src/components/volleyballPage.css
@@ -52,7 +52,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    
   }
+
 
   @media screen and (min-width: 819px) and (max-width: 835px) {
     .v-cut2 {
@@ -139,6 +141,9 @@
     }
   }
   @media screen and (max-width: 576px){
+    .volleyball-page-hero {
+      zoom: 70%;
+    }
     .v-cut2 {
       display: none;
     }
@@ -147,5 +152,11 @@
     }
     .stadiums{
       height: 600px;
+    }
+    .v-footer{
+      height:210px ;
+    }
+    .v-footer .footer-div{
+      padding-top: 10px;
     }
   }
