--- a/src/components/home.css
+++ b/src/components/home.css
@@ -451,7 +451,11 @@ video {
   text-decoration: underline;
   cursor: pointer;
 }
-
+.trigger{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @media screen and (min-width: 576px) and (max-width: 900px) {
   .header {
     gap: 25px;
