--- a/src/components/events.css
+++ b/src/components/events.css
@@ -1,11 +1,10 @@
 .events-hero {
-  background-image: url("../images/sportevent_1-scaled.jpg");
+  background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/sportevent_1-scaled.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 880px;
   position: relative;
-  /* border-bottom: 3px solid rgba(252, 252, 252, 0.42); */
   display: flex;
   justify-content: center;
   z-index: 0;
@@ -18,6 +17,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .colors {
   position: absolute;
