--- a/src/components/cafeteria.css
+++ b/src/components/cafeteria.css
@@ -179,6 +179,7 @@
   width: 900px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
 }
@@ -238,6 +239,13 @@
 }
 .box-close:hover{
   cursor: pointer;
+}
+.info{
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: black;
 }
 @media screen and (min-width: 700px) and (max-width: 835px){
   .cafeteria-hero .our-products {
