--- a/src/components/events.css
+++ b/src/components/events.css
@@ -88,8 +88,9 @@
 }
 .events {
   margin-top: 400px;
+  margin-bottom: 150px;
   width: 100%;
-  height: 1300px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   gap: 50px;
