--- a/src/components/home.css
+++ b/src/components/home.css
@@ -112,6 +112,19 @@ body {
   background-color: #333;
   z-index: 1;
 }
+.sports2 {
+  position: absolute;
+  left: 39.8%;
+  top: 9%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #333;
+  z-index: 1;
+}
 .sports div:hover {
   scale: 1.15;
   cursor: pointer;
