--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,10 +1,11 @@
 .contact-container {
   background-image: url("../images/contact.jpg");
-  background-position: -3.961px 0px;
+  background-position: -500px 0px;
   background-repeat: no-repeat;
   background-size: 150.656% 100%;
   height: 1440px;
   position: relative;
+  zoom:90%;
 }
 .contact-form {
   position: absolute;
