--- a/src/components/home.css
+++ b/src/components/home.css
@@ -129,6 +129,10 @@ body {
   scale: 1.15;
   cursor: pointer;
 }
+.sports2 div:hover {
+  scale: 1.15;
+  cursor: pointer;
+}
 .language:hover {
   cursor: pointer;
 }
@@ -436,7 +440,9 @@ video {
   width: 50px;
   height: 50px;
 }
-
+.footer-social-media img:hover {
+  scale: 1.1;
+}
 .footer-div2 {
   display: flex;
   flex-direction: row;
@@ -462,20 +468,64 @@ video {
   text-decoration: underline;
   cursor: pointer;
 }
-.trigger{
+.trigger {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.box-close{
+.box-close {
   position: absolute;
   font-size: 25px;
   color: black;
   right: 5%;
   top: 1%;
 }
-.box-close:hover{
+.box-close:hover {
   cursor: pointer;
+}
+.oops-container {
+  width: 100%;
+  height: 850px;
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2) 0%,
+      rgba(0, 0, 0, 0.2) 100%
+    ),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+    url("../images/oops.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.oops-text{
+  margin-top: 22%;
+  font-weight: 500;
+  font-size: 40px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  align-items: center;
+}
+.red-card{
+  width: 50px;
+  height: 70px;
+  background-color: #d21034;
+}
+.back-home-link{
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 30px;
+ color: #fff;
+}
+.back-home-link:hover{
+  text-decoration: underline;
+}
+.link-container{
+  display: flex;
+ justify-content: center;
 }
 
 @media screen and (min-width: 576px) and (max-width: 1010px) {
@@ -754,20 +804,20 @@ video {
     color: black;
     background-color: #333;
   }
-  .modal-box span{
+  .modal-box span {
     font-size: 30px;
     position: absolute;
     color: white;
     right: 5%;
     top: 3%;
   }
-  .modal-box .box-link{
+  .modal-box .box-link {
     text-decoration: none;
     color: #fff;
     font-size: 30px;
     font-weight: 400;
   }
-  .modal-box .box-link:hover{
+  .modal-box .box-link:hover {
     border: 2px solid white;
     padding: 10px;
   }
@@ -953,5 +1003,49 @@ video {
     font-weight: 400;
     line-height: normal;
     list-style-type: none;
+  }
+  .oops-container {
+    width: 100%;
+    height: 850px;
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.2) 0%,
+        rgba(0, 0, 0, 0.2) 100%
+      ),
+      linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+      url("../images/oops.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+  .oops-text{
+    margin-top: 55%;
+    font-weight: 500;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    align-items: center;
+  }
+  .red-card{
+    width: 30px;
+    height: 50px;
+    background-color: #d21034;
+  }
+  .back-home-link{
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 20px;
+   color: #fff;
+  }
+  .back-home-link:hover{
+    text-decoration: underline;
+  }
+  .link-container{
+    display: flex;
+   justify-content: center;
   }
 }
