added some toastifies

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -237,10 +237,11 @@
     border-radius: 10px;
   }
   .login-form button:hover{
-      cursor: pointer;
-      background-color: transparent;
-      color:#D21034;
-      border: 1px solid #D21034;
+    cursor: pointer;
+    background-color: transparent;
+    color:white;
+    border: 3px solid white;
+    font-family: 500;
   }
   
 }
